# flooder

./: .flake8  .gitignore  404.html  LICENSE  MANIFEST.in  README.md  README2.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
animation/: edges.csv  generate_csvs.py
contributing/: index.html
datasets/: index.html
docs/: contributing.md  datasets.md  examples.md  index.md  install.md  visualizations.md
docs/animation/: edges.csv  flood_triangle.js  generate_csvs.py  landmarks.csv  points.csv  triangles.csv
docs/reference/: core.md  datasets.md  io.md  synthetic_data_generators.md
docs/visualization/: visualization_coral.js  visualization_virus.js
examples/: cheese_runtime_example.py  example_01_cheese_3D.py  example_01_cheese_3d.py  example_02_torus_3D.py  example_02_torus_3d.py  example_03_figure_eight_2D.py  example_03_figure_eight_2d.py  figure_eight_2D_example.py  index.html  torus_toy_example.py
flooder/: __init__.py  cli.py  core.py  core_copy.py  io.py  synthetic_data_generators.py  triton_kernel_flood_filtered.py  triton_kernels.py
flooder/datasets/: __init__.py  datasets.py
install/: index.html
reference/core/: index.html
reference/datasets/: index.html
reference/io/: index.html
reference/synthetic_data_generators/: index.html
search/: search_index.json
tests/: conftest.py  test_flooder.py  test_landmarks.py  test_synthetic_generators.py
visualization/: visualization_lockwasher.js
visualization/coral/: landmarks.csv  tetrahedra.csv  (+1 more)
visualizations/: index.html
(+9 files in other folders)
