[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flooder"
version = "0.1.1"
description = "Flood complex PH"
readme = "README.md"
license = "MIT"
authors = [{ name="Paolo Pellizzoni, Florian Graf, Martin Uray, Stefan Huber, Roland Kwitt", email="roland.kwitt@gmail.com" }]
dependencies = [
    "torch",
    "gudhi",
    "numpy",
    "plotly",
    "pandas",
    "kaleido",
    "fpsample",
]
requires-python = ">=3.8"